--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,13 +20,9 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules"
 ]
 packages = [
-    { include = "hal", from = "python" }
+    { include = "hal", from = "src" }
 ]
-include = ["python/hal/etc/*"]
-
-[tool.poetry.build]
-script = "build.py"
-generate-setup-file = false
+include = ["src/hal/etc/*"]
 
 [tool.poetry.scripts]
 hal = "hal.__main__:main"
@@ -52,24 +48,30 @@ codecov = ">=2.0.15"
 coverage = {version = ">=5.0", extras = ["toml"]}
 ipdb = ">=0.12.3"
 rstcheck = "^3.3.1"
+black = ">=20.8b1"
+jedi = ">=0.17.2"
+Sphinx = "^3.0.0"
+
+[tool.black]
+line-length = 88
+target-version = ['py38']
+fast = true
 
 [tool.isort]
-line_length = 79
-sections = ["FUTURE", "STDLIB", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
+profile = "black"
+sections = ["FUTURE", "STDLIB", "TYPING", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
 default_section = "THIRDPARTY"
 known_first_party = "hal"
+known_typing = ["typing"]
 known_sdss = ["sdsstools"]
-balanced_wrapping = true
-include_trailing_comma = false
 lines_after_imports = 2
-use_parentheses = true
 
 [tool.pytest.ini_options]
 addopts = "--cov hal --cov-report xml --cov-report html --cov-report term"
 
 [tool.coverage.run]
 branch = true
-include = ["python/hal/*"]
+include = ["src/hal/*"]
 omit = [
     "*/__init__.py",
 ]
