--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Setup node.js (for pyright)
+        uses: actions/setup-node@v2
+        with:
+          node-version: '12'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -56,6 +61,12 @@ jobs:
       - name: Lint with isort
         run: |
           poetry run isort -c archon
+
+      - name: Run type checking
+        continue-on-error: true
+        run: |
+          npm install -g pyright
+          poetry run pyright
 
       - name: Test with pytest
         run: |
