--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Lint with isort
         run: |
-          poetry run isort -c archon
+          poetry run isort -c src/hal
 
       - name: Run type checking
         continue-on-error: true
