--- a/src/hal/etc/hal.yml
+++ b/src/hal/etc/hal.yml
@@ -1,9 +1,9 @@
 ---
 actor:
   name: hal
-  host: 127.0.0.1
+  host: 0.0.0.0
   port: 19980
-  tron_host: 127.0.0.1
+  tron_host: sdss5-hub.apo.nmsu.edu
   tron_port: 6093
   models:
     - tcc
