--- a/src/hal/etc/hal.yml
+++ b/src/hal/etc/hal.yml
@@ -1,10 +1,10 @@
 ---
 actor:
-  name: hal
+  name: sop
   host: 0.0.0.0
   port: 19980
-  tron_host: sdss5-hub.apo.nmsu.edu
-  tron_port: 6093
+  tron_host: ${TRON_HOST}
+  tron_port: ${TRON_PORT}
   models:
     - tcc
     - mcp
