Initial GotoFieldMacro class

--- a/src/hal/etc/hal.yml
+++ b/src/hal/etc/hal.yml
@@ -9,14 +9,36 @@ actor:
     - tcc
     - mcp
     - apogee
+    - jaeger
+    - cherno
+    - boss
+    - hartmann
   log_dir: /data/logs/actors/hal
 
 timeouts:
   ffs: 30.0
-  lamps: 5.0
+  lamps: 30.0
   apogee_shutter: 15.0
+  boss_flushing: 25.0
+  boss_readout: 82.0
   expose: 25.0
   slew: 160.0
+  hartmann: 260.
+  fvc: 300.
+
+lamp_warmup:
+  ff: 1
+  wht: 0
+  UV: 0
+  HgCd: 120
+  Ne: 20
+
+macros:
+  goto_field:
+    arc_time: 4
+    flat_time: 25
+    offset: [0, 0, -432]
+    guider_time: 15.
 
 goto:
   stow:
