--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,10 @@ jobs:
       matrix:
         python-version: ['3.9', '3.10']
 
+    env:
+      PYTHONPATH: '/home/runner/work/hal/hal/actorkeys/python'
+      OBSERVATORY: 'APO'
+
     steps:
       - uses: actions/checkout@v2
 
@@ -37,6 +41,13 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Clone actorkeys
+        uses: actions/checkout@master
+        with:
+          repository: sdss/actorkeys
+          ref: sdss5
+          path: actorkeys
 
       - name: Setup node.js (for pyright)
         uses: actions/setup-node@v2
