--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ sdss-clu = "^1.4.0"
 click-default-group = "^1.2.2"
 
 [tool.poetry.dev-dependencies]
-ipython = ">=8.0.0rc1"
+ipython = ">=8.0.0"
 matplotlib = ">=3.1.1"
 flake8 = ">=3.7.9"
 doc8 = ">=0.8.0"
