--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ python = "^3.9,<4.0"
 sdsstools = "^0.4.0"
 sdss-clu = "^1.4.0"
 click-default-group = "^1.2.2"
+numpy = "^1.22.1"
 
 [tool.poetry.dev-dependencies]
 ipython = ">=8.0.0"
