--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,10 +54,13 @@ jobs:
         with:
           node-version: '12'
 
+      - name: Install poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 - --git https://github.com/python-poetry/poetry.git@master
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install poetry
+          poetry run pip install --upgrade wheel pip setuptools
           poetry install
 
       - name: Lint with flake8
