--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: Test
 
 on:
@@ -60,33 +57,37 @@ jobs:
 
       - name: Install dependencies
         run: |
-          poetry run pip install --upgrade wheel pip setuptools
-          poetry install
+          pip install --upgrade wheel pip setuptools
+          pip install .
 
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
-          poetry run flake8 src/hal --count --show-source --statistics
+          pip install flake8
+          flake8 src/hal --count --show-source --statistics
 
       - name: Lint with black
         run: |
-          poetry run black --check src/hal
+          pip install black
+          black --check src/hal
 
       - name: Lint with isort
         run: |
-          poetry run isort -c src/hal
+          pip install isort
+          isort -c src/hal
 
       - name: Run type checking
         continue-on-error: true
         run: |
           npm install -g pyright
-          poetry run pyright
+          pyright
 
       - name: Test with pytest
         run: |
-          poetry run pytest
+          pip install pytest pytest-mock pytest-asyncio pytest-cov
+          pytest
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v3
         with:
           file: ./coverage.xml
