--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ sdsstools = "^0.4.0"
 sdss-clu = "^1.4.0"
 click-default-group = "^1.2.2"
 numpy = "^1.22.1"
+sdssdb = "^0.5.5"
 
 [tool.poetry.dev-dependencies]
 ipython = ">=8.0.0"
