--- a/src/hal/etc/hal.yml
+++ b/src/hal/etc/hal.yml
@@ -48,7 +48,7 @@ macros:
     arc_time: 4
     flat_time: 25
     guider_time: 15.
-    n_acquisition: 5
+    target_rms: 1.0
     fvc_az: 121
     fvc_alt: 70
     fvc_rot: 190
