--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,11 +2,9 @@ name: Test
 
 on:
   push:
-    branches: [main]
     paths-ignore:
       - 'docs/**'
   pull_request:
-    branches: [main]
     paths-ignore:
       - 'docs/**'
 
@@ -17,39 +15,37 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9', '3.10']
+        python-version: ['3.9', '3.10', '3.11']
 
     env:
       PYTHONPATH: '/home/runner/work/HAL/HAL/actorkeys/python'
       OBSERVATORY: 'APO'
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Cache Setup
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Clone actorkeys
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
         with:
           repository: sdss/actorkeys
           ref: sdss5
           path: actorkeys
 
-      - name: Setup node.js (for pyright)
-        uses: actions/setup-node@v2
-        with:
-          node-version: '12'
+      # - name: Setup node.js (for pyright)
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 16
 
       - name: Install dependencies
         run: |
