--- a/src/hal/etc/hal.yml
+++ b/src/hal/etc/hal.yml
@@ -57,15 +57,25 @@ macros:
     fixed_altaz: false
     cloned_stages: []
     new_field_stages:
-      ['slew', reconfigure", 'fvc', 'reslew', 'boss_arc', 'acquire', 'guide']
+      [
+        'slew',
+        reconfigure",
+        'fvc',
+        'reslew',
+        'lamps',
+        'boss_arc',
+        'acquire',
+        'guide',
+      ]
     repeat_field_stages:
-      ['slew', reconfigure", 'fvc', 'reslew', 'acquire', 'guide']
+      ['slew', reconfigure", 'fvc', 'reslew', 'lamps', 'acquire', 'guide']
     rm_field_stages:
       [
         'slew',
         reconfigure",
         'fvc',
         'reslew',
+        'lamps',
         'boss_arc',
         'boss_flat',
         'acquire',
