Initial refactor with ExposeHelper

--- a/src/hal/etc/hal.yml
+++ b/src/hal/etc/hal.yml
@@ -19,8 +19,13 @@ actor:
   log_dir: /data/logs/actors/hal
 
 durations:
-  boss_flushing: 17
-  boss_readout: 63
+  boss:
+    APO:
+      flushing: 17
+      readout: 63
+    LCO:
+      flushing: 4
+      readout: 32
   apogee_read: 10.6
 
 timeouts:
@@ -83,17 +88,18 @@ macros:
       ]
 
   expose:
-    boss_exposure_time: 900.
-    apogee_exposure_time: null
-    count: 1
+    boss_exptime: null
+    apogee_exptime: null
     count_apogee: null
     count_boss: null
-    apogee: true
-    boss: true
     pairs: true
-    disable_dithering: false
+    dither: true
     initial_apogee_dither: null
     with_fpi: true
+    readout_matching: true
+    fallback:
+      count: 1
+      exptime: 900.0
 
 goto:
   stow:
