--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sdss-hal"
-version = "0.4.1a0"
+version = "0.5.0"
 description = "High-level observing tool for SDSS-V (replaces SOP)"
 authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
 license = "BSD-3-Clause"
@@ -29,11 +29,11 @@ hal = "hal.__main__:hal"
 
 [tool.poetry.dependencies]
 python = "^3.9,<4.0"
-sdsstools = "^0.4.0"
+sdsstools = "^1.0.0"
 sdss-clu = "^1.4.0"
 click-default-group = "^1.2.2"
 numpy = "^1.22.1"
-sdssdb = "^0.5.5"
+sdssdb = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 ipython = ">=8.0.0"
