COS-66 Modify exposures (#13)
* Initial refactor with ExposeHelper

* Black'n

* Update deps

* Add tests and fix multiple bugs

* Test for expose command and a couple fixes

* Add a test that actually executes ExposeMacro.run()

* Support modifying the expose macro

* Remove unused import

* Update changelog

* Update help for --modify

* Restore option to stop expose macro

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ sphinx-autobuild = ">=2021.3.14"
 
 [tool.black]
 line-length = 88
-target-version = ['py39']
+target-version = ['py310']
 fast = true
 
 [tool.isort]
@@ -90,6 +90,8 @@ omit = [
 
 [tool.coverage.report]
 exclude_lines = [
+    "if TYPE_CHECKING:",
+    "# pragma: no cover"
 ]
 
 [build-system]
