Double the allowed number of iterations during acquisition
Also rename max_iterations to acquisition_max_iterations and
target_rms to acquisition_target_rms

--- a/src/hal/etc/hal.yml
+++ b/src/hal/etc/hal.yml
@@ -49,8 +49,8 @@ macros:
     arc_time: 4
     flat_time: 25
     guider_time: 15.
-    target_rms: 1.0
-    max_iterations: 5
+    acquisition_target_rms: 1.0
+    acquisition_max_iterations: 10
     fvc_az: 121
     fvc_alt: 70
     fvc_rot: 190
