--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ click-default-group = "^1.2.2"
 numpy = "^1.22.1"
 sdssdb = "^0.6.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 ipython = ">=8.0.0"
 matplotlib = ">=3.1.1"
 flake8 = ">=3.7.9"
@@ -60,20 +60,31 @@ sphinx-jsonschema = ">=1.16.11"
 myst-parser = ">=0.15.2"
 nox = ">=2021.6.12"
 sphinx-autobuild = ">=2021.3.14"
+ruff = ">=0.0.291"
 
 [tool.black]
 line-length = 88
-target-version = ['py310']
+target-version = ['py311']
 fast = true
 
-[tool.isort]
-profile = "black"
-sections = ["FUTURE", "STDLIB", "TYPING", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
-default_section = "THIRDPARTY"
-known_first_party = "hal"
-known_typing = ["typing"]
-known_sdss = ["sdsstools", "clu"]
-lines_after_imports = 2
+[tool.ruff]
+line-length = 88
+target-version = 'py311'
+select = ["E", "F", "I"]
+unfixable = ["F841"]
+exclude = ["typings/"]
+
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["F401", "F403", "E402"]
+
+[tool.ruff.isort]
+known-first-party = ["hal"]
+lines-after-imports = 2
+section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]
+
+[tool.ruff.isort.sections]
+typing = ["typing"]
+sdss = ["sdsstools", "clu"]
 
 [tool.pytest.ini_options]
 addopts = "--cov hal --cov-report xml --cov-report html --cov-report term -W ignore"
