--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,6 +54,7 @@ jobs:
 
       - name: Lint with ruff
         run: |
+          pip install ruff
           ruff .
 
       - name: Lint with black
