--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Lint with ruff
         run: |
           pip install ruff
-          ruff .
+          ruff . src/hal
 
       - name: Lint with black
         run: |
