--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,25 +15,20 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9', '3.10', '3.11']
+        python-version: ['3.9', '3.10', '3.11', '3.12']
 
     env:
       PYTHONPATH: '/home/runner/work/HAL/HAL/actorkeys/python'
       OBSERVATORY: 'APO'
 
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Cache Setup
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+      - uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'
 
       - name: Clone actorkeys
         uses: actions/checkout@v3
@@ -41,11 +36,6 @@ jobs:
           repository: sdss/actorkeys
           ref: sdss5
           path: actorkeys
-
-      # - name: Setup node.js (for pyright)
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: 16
 
       - name: Install dependencies
         run: |
@@ -62,12 +52,6 @@ jobs:
           pip install black
           black --check src/hal
 
-      # - name: Run type checking
-      #   continue-on-error: true
-      #   run: |
-      #     npm install -g pyright
-      #     pyright
-
       - name: Test with pytest
         run: |
           pip install pytest pytest-mock pytest-asyncio pytest-cov
@@ -76,4 +60,5 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage.xml
