--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,10 +1,11 @@
 version: 2
 
 build:
-  image: testing
+  os: ubuntu-22.04
+  tools:
+    python: '3.12'
 
 python:
-  version: 3.9
   install:
     - requirements: docs/sphinx/requirements.txt
     - method: pip
