--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ sdsstools = "^1.0.0"
 sdss-clu = "^2.0.0"
 click-default-group = "^1.2.2"
 numpy = "^1.22.1"
-sdssdb = ">=0.6.0"
+sdssdb = ">=0.8.2"
+peewee = "^3.17.0"
 
 [tool.poetry.group.dev.dependencies]
 ipython = ">=8.0.0"
