--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,6 +56,8 @@ jobs:
         run: |
           pip install pytest pytest-mock pytest-asyncio pytest-cov
           pytest
+        env:
+          OBSERVATORY: 'APO'
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
