--- a/codecov.yml
+++ b/codecov.yml
@@ -7,6 +7,7 @@ coverage:
       default:
         target: auto # Require that we increase the coverage wrt the base commit
         informational: false
+        only_pulls: true # Only require coverage on pull requests
     patch:
       default:
         target: 90% # Require to cover at least 90% of the new code
