--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sdss-hal"
-version = "0.7.1a0"
+version = "0.7.1"
 description = "High-level observing tool for SDSS-V (replaces SOP)"
 authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
 license = "BSD-3-Clause"
@@ -39,20 +39,16 @@ peewee = "^3.17.0"
 [tool.poetry.group.dev.dependencies]
 ipython = ">=8.0.0"
 matplotlib = ">=3.1.1"
-flake8 = ">=3.7.9"
-doc8 = ">=0.8.0"
 pytest = ">=5.2.2"
 pytest-asyncio = ">=0.10.0"
 pytest-cov = ">=2.8.1"
 pytest-mock = ">=1.13.0"
 pytest-sugar = ">=0.9.2"
-isort = ">=4.3.21"
 codecov = ">=2.0.15"
 coverage = {version = ">=5.0", extras = ["toml"]}
 ipdb = ">=0.12.3"
 rstcheck = ">=3.3.1"
 black = ">=20.8b1"
-jedi = ">=0.17.2"
 Sphinx = ">=4.0.0"
 furo = ">=2021.9.22"
 sphinx-copybutton = ">=0.4.0"
