--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Test with pytest
         run: |
           pip install pytest pytest-mock pytest-asyncio pytest-cov
-          pytest
+          pytest tests/
         env:
           OBSERVATORY: 'APO'
 
