--- a/src/hal/etc/hal.yml
+++ b/src/hal/etc/hal.yml
@@ -46,8 +46,12 @@ lamp_warmup:
 
 macros:
   goto_field:
-    arc_time: 4
-    flat_time: 25
+    arc_time:
+      APO: 4
+      LCO: 10
+    flat_time:
+      APO: 25
+      LCO: 100
     guider_time: 15.
     acquisition_target_rms: 1.0
     acquisition_min_rms: 3.0
@@ -58,32 +62,68 @@ macros:
     keep_offsets: true
     fixed_rot: false
     fixed_altaz: false
-    cloned_stages: []
-    new_field_stages:
-      [
-        'slew',
-        'reconfigure',
-        'fvc',
-        'reslew',
-        'lamps',
-        'boss_arcs',
-        'acquire',
-        'guide',
-      ]
-    repeat_field_stages:
-      ['slew', 'reconfigure', 'fvc', 'reslew', 'lamps', 'acquire', 'guide']
-    rm_field_stages:
-      [
-        'slew',
-        'reconfigure',
-        'fvc',
-        'reslew',
-        'lamps',
-        'boss_arcs',
-        'boss_flat',
-        'acquire',
-        'guide',
-      ]
+    auto_mode:
+      cloned_stages:
+        APO: []
+        LCO: []
+      new_field_stages:
+        APO:
+          - slew
+          - reconfigure
+          - fvc
+          - reslew
+          - lamps
+          - boss_arcs
+          - acquire
+          - guide
+        LCO:
+          - slew
+          - reconfigure
+          - fvc
+          - reslew
+          - lamps
+          - boss_arcs
+          - boss_flat
+          - acquire
+          - guide
+      repeat_field_stages:
+        APO:
+          - slew
+          - reconfigure
+          - fvc
+          - reslew
+          - lamps
+          - acquire
+          - guide
+        LCO:
+          - slew
+          - reconfigure
+          - fvc
+          - reslew
+          - lamps
+          - acquire
+          - guide
+      rm_field_stages:
+        APO:
+          - slew
+          - reconfigure
+          - fvc
+          - reslew
+          - lamps
+          - boss_arcs
+          - boss_flat
+          - acquire
+          - guide
+        LCO:
+          - slew
+          - reconfigure
+          - fvc
+          - reslew
+          - lamps
+          - boss_arcs
+          - boss_flat
+          - acquire
+          - guide
 
   expose:
     boss_exptime: null
