--- a/codecov.yml
+++ b/codecov.yml
@@ -12,3 +12,4 @@ coverage:
       default:
         target: 90% # Require to cover at least 90% of the new code
         informational: false
+        only_pulls: true # Only require coverage on pull requests
