--- a/src/hal/etc/hal.yml
+++ b/src/hal/etc/hal.yml
@@ -88,7 +88,7 @@ macros:
       LCO:
         exposure_time: 15
         max_exposure_time: 30
-        dynamic_exposure_time: true
+        dynamic_exposure_time: false
         wait_time: 10
     auto_mode:
       cloned_stages:
