--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,19 +65,21 @@ fast = true
 [tool.ruff]
 line-length = 88
 target-version = 'py311'
-select = ["E", "F", "I"]
-unfixable = ["F841"]
 exclude = ["typings/"]
 
-[tool.ruff.per-file-ignores]
+[ruff.lint]
+select = ["E", "F", "I"]
+unfixable = ["F841"]
+
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401", "F403", "E402"]
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["hal"]
 lines-after-imports = 2
 section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]
 
-[tool.ruff.isort.sections]
+[tool.ruff.lint.isort.sections]
 typing = ["typing"]
 sdss = ["sdsstools", "clu"]
 
