--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ click-default-group = "^1.2.2"
 numpy = "^1.22.1"
 sdssdb = ">=0.8.3"
 peewee = "^3.17.0"
+typing-extensions = "^4.11.0"
 
 [tool.poetry.group.dev.dependencies]
 ipython = ">=8.0.0"
