--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -14,12 +14,6 @@ jobs:
 
     strategy:
       fail-fast: false
-      matrix:
-        python-version: ['3.10', '3.11', '3.12']
-
-    env:
-      PYTHONPATH: '/home/runner/work/HAL/HAL/actorkeys/python'
-      OBSERVATORY: 'APO'
 
     steps:
       - uses: actions/checkout@v4
@@ -27,7 +21,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.12'
           cache: 'pip'
 
       - name: Clone actorkeys
@@ -42,15 +36,12 @@ jobs:
           pip install --upgrade wheel pip setuptools
           pip install .
 
-      - name: Test with pytest
+      - name: Lint with ruff
         run: |
-          pip install pytest pytest-mock pytest-asyncio pytest-cov
-          pytest tests/
-        env:
-          OBSERVATORY: 'APO'
+          pip install ruff
+          ruff check src/hal
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.xml
+      - name: Lint with black
+        run: |
+          pip install black
+          black --check src/hal
