--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -40,8 +40,4 @@ jobs:
         run: |
           pip install ruff
           ruff check src/hal
-
-      - name: Lint with black
-        run: |
-          pip install black
-          black --check src/hal
+          ruff format --check src/hal
