--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,33 +4,27 @@ on:
   push:
     paths-ignore:
       - 'docs/**'
-      - '**/*.md'
   pull_request:
     paths-ignore:
       - 'docs/**'
-      - '**/*.md'
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  test:
+    name: Test
 
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ['3.10', '3.11', '3.12']
+    runs-on: ubuntu-24.04
 
     env:
       PYTHONPATH: '/home/runner/work/HAL/HAL/actorkeys/python'
       OBSERVATORY: 'APO'
 
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ['3.10', '3.11', '3.12', '3.13']
+
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          cache: 'pip'
 
       - name: Clone actorkeys
         uses: actions/checkout@v4
@@ -39,20 +33,27 @@ jobs:
           ref: sdss5
           path: actorkeys
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+
       - name: Install dependencies
         run: |
-          pip install --upgrade wheel pip setuptools
-          pip install .
+          uv sync --no-dev --frozen
 
       - name: Test with pytest
         run: |
-          pip install pytest pytest-mock pytest-asyncio pytest-cov
-          pytest tests/
-        env:
-          OBSERVATORY: 'APO'
+          uv pip install pytest pytest-mock pytest-asyncio pytest-cov
+          uv run pytest
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.xml
+          files: ./coverage.xml
