Add expose.enabled_instruments option

--- a/src/hal/etc/hal.yml
+++ b/src/hal/etc/hal.yml
@@ -148,6 +148,7 @@ macros:
           - guide
 
   expose:
+    enabled_instruments: ['apogee', 'boss']
     boss_exptime: null
     apogee_exptime: null
     count_apogee: null
