--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "sdss-hal"
-version = "1.3.6a0"
+version = "1.4.0"
 description = "High-level observing tool for SDSS-V (replaces SOP)"
 authors = [ { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" } ]
 license = "BSD-3-Clause"
